--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-vector-icons/material-design-icons": "^12.0.0",
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-native": "0.79.2",
+    "react-native-paper": "^5.14.5",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
