--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-paper": "^5.14.5",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-vector-icons": "^10.2.0"
   },
