--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
   },
   "dependencies": {
     "@react-native-vector-icons/material-design-icons": "^12.0.0",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native-stack": "^7.3.13",
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-screens": "~4.10.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-safe-area-context": "5.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-flow": "^7.27.1",
+    "metro-react-native-babel-preset": "^0.77.0"
   },
   "private": true
 }
