--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-native-picker/picker": "^2.11.0",
     "@react-native-vector-icons/material-design-icons": "^12.0.0",
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.13",
     "expo": "~53.0.9",
+    "expo-clipboard": "~7.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
