--- a/ios/XuanShopMart/Info.plist
+++ b/ios/XuanShopMart/Info.plist
@@ -31,6 +31,11 @@
         </array>
       </dict>
     </array>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>fb</string>
+      <string>fb-messenger</string>
+    </array>
     <key>CFBundleVersion</key>
     <string>1</string>
     <key>LSMinimumSystemVersion</key>
