feat: integrate Firebase messaging for push notifications
- Added Firebase app and messaging dependencies in package.json.
- Created NotificationScreen component to handle push notifications.
- Implemented token retrieval and foreground message handling in NotificationScreen.
- Added permission request functionality for notifications.
- Included GoogleService-Info.plist for Firebase configuration.
- Updated Home screen to include NotificationScreen (commented out for now).

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,9 +12,10 @@ install! 'cocoapods',
   :deterministic_uuids => false
 
 prepare_react_native_project!
+use_modular_headers!
 
 target 'XuanShopMart' do
-  use_expo_modules!
+  # use_expo_modules!
 
   if ENV['EXPO_USE_COMMUNITY_AUTOLINKING'] == '1'
     config_command = ['node', '-e', "process.argv=['', '', 'config'];require('@react-native-community/cli').run()"];
@@ -30,9 +31,15 @@ target 'XuanShopMart' do
   end
 
   config = use_native_modules!(config_command)
+  pod 'GoogleUtilities', :modular_headers => true # HASAN ABLAK
+  pod 'FirebaseCore', :modular_headers => true # HASAN ABLAK
+  pod 'Firebase/Messaging'
 
   use_frameworks! :linkage => podfile_properties['ios.useFrameworks'].to_sym if podfile_properties['ios.useFrameworks']
   use_frameworks! :linkage => ENV['USE_FRAMEWORKS'].to_sym if ENV['USE_FRAMEWORKS']
+  
+  use_frameworks! :linkage => :static #HASAN ABLAK => YUKARIDAKİ DEĞİL BU OLACAK
+  $RNFirebaseAsStaticFramework = true #HASAN ABLAK
 
   use_react_native!(
     :path => config[:reactNativePath],
