--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,11 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath('com.android.tools.build:gradle')
+    // classpath('com.android.tools.build:gradle')
+    // classpath('com.facebook.react:react-native-gradle-plugin')
+    // classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
+    // classpath 'com.google.gms:google-services:4.4.2'
+    classpath('com.android.tools.build:gradle:8.4.1') // ✅ BỔ SUNG PHIÊN BẢN
     classpath('com.facebook.react:react-native-gradle-plugin')
     classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
     classpath 'com.google.gms:google-services:4.4.2'
