--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@react-navigation/native-stack": "^7.3.13",
     "expo": "~53.0.9",
     "expo-clipboard": "~7.1.4",
+    "expo-dev-client": "~5.2.1",
     "expo-linear-gradient": "~14.1.4",
+    "expo-modules-core": "^2.4.0",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-device-info": "^14.0.4",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.5",
@@ -36,7 +39,7 @@
     "react-native-screens": "~4.10.0",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0",
-    "expo-dev-client": "~5.2.1"
+    "expo-constants": "~17.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
