--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native-stack": "^7.3.13",
     "expo": "~53.0.9",
     "expo-clipboard": "~7.1.4",
+    "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.2.1",
     "expo-linear-gradient": "~14.1.4",
     "expo-modules-core": "^2.4.0",
@@ -38,8 +39,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-uuid": "^2.0.3",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-constants": "~17.1.6"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
