--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.13",
+    "eas-cli": "^16.12.0",
     "expo": "~53.0.9",
     "expo-clipboard": "~7.1.4",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.2.1",
-    "expo-linear-gradient": "~14.1.4",
-    "expo-modules-core": "^2.4.0",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-modules-core": "~2.4.0",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
