Add launcher background color and create Policy and Privacy screen with WebView

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "XuanShopMart",
+    "name": "Xuân Shop Việt Nhật",
     "slug": "XuanShopMart",
     "version": "1.0.5",
     "orientation": "portrait",
