Update build configurations and enhance Messenger button with ripple effect animations

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -128,6 +128,12 @@ android {
             useLegacyPackaging (findProperty('expo.useLegacyPackaging')?.toBoolean() ?: false)
         }
     }
+    // Point to the local CMake setup that injects the 16 KB page size linker flag.
+    externalNativeBuild {
+        cmake {
+            path "src/main/jni/CMakeLists.txt"
+        }
+    }
     androidResources {
         ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:!CVS:!thumbs.db:!picasa.ini:!*~'
     }
