--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,6 +17,14 @@ buildscript {
   }
 }
 
+ext {
+  buildToolsVersion = "34.0.0"
+  minSdkVersion = 24
+  compileSdkVersion = 34
+  targetSdkVersion = 34
+  ndkVersion = "26.1.10909125"
+}
+
 def reactNativeAndroidDir = new File(
   providers.exec {
     workingDir(rootDir)
