--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyBxo99Bn1KEDnYD_U49VmzE6dFNX8n42Pc</string>
+	<string>sampleAPI_KEY</string>
 	<key>GCM_SENDER_ID</key>
-	<string>783410810401</string>
+	<string>sampleAPI_KEY</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.anonymous.XuanShopVietNhat</string>
 	<key>PROJECT_ID</key>
-	<string>xuanshopvietnhat-330a4</string>
+	<string>sample-330a4</string>
 	<key>STORAGE_BUCKET</key>
-	<string>xuanshopvietnhat-330a4.firebasestorage.app</string>
+	<string>sample-330a4.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:783410810401:ios:676a699df3ff1cf3e31d60</string>
+	<string>1:783410810401:ios:sample</string>
 </dict>
 </plist>
